# JPP

./: README.md
l1/z1/: CMakeLists.txt  build.sh  common.h  iterative.c  main.c  recursive.c
l1/z2/: build.sh  iterative.adb  iterative.ads  main.adb  recursive.adb  recursive.ads  z2.gpr
l1/z3/: iterative.py  main.py
l1/z4/: CMakeLists.txt  build.sh  main  main.c
l1/z4/z2/: iterative.adb  iterative.ads  recursive.adb  recursive.ads  z4.gpr
l1/z5/: build.sh  iterative.ads  main.adb  recursive.ads  z5.gpr
l1/z5/z1/: iterative.h  recursive.h
l1/z6/: build.sh  iterative.py  main.py  recursive.py
l1/z6/z1/: CMakeLists.txt  iterative.c  recursive.c
l1/z7/: CMakeLists.txt  common.c  common.h  iterative.c  iterative.h  main.c  recursive.c  recursive.h  recursive.py
l2/z1/: GF1234577.cpp
l2/z2/: GF1234577.java
l2/z3/: GF1234577.py
l3/z1/: CMakeLists.txt  main.cpp
l3/z1/lib/: DHSetup.h  GF1234567891.h  User.h
l3/z2/: Main.java
l3/z2/lib/: DHSetup.java  Field.java  GF1234567891.java  User.java
l3/z3/: DHSetup.cs  GF1234567891.cs  IFieldElement.cs  Program.cs  User.cs
l4/z1/: dining_philosophers.adb
l4/z2/: dining_philosophers.go
l4/z3/: main.rs
l5/z1/Haskell/: Main.hs
l5/z1/Haskell/Binomial/: MainBinomial.hs
l5/z1/Haskell/Binomial2/: MainBinomial2.hs
l5/z1/Haskell/De/: MainDe.hs
l5/z1/Haskell/Mergesort/: MainMergesort.hs
l5/z1/Haskell/PrimeFactors/: MainPrimeFactors.hs
l5/z1/Haskell/Primes/: MainPrimes.hs
l5/z1/Lisp/: Main.lisp
l5/z1/SML/: Main.sml
l5/z2/: de.pl  main.pl  mergesort.pl  prime_factors.pl  primes.pl  totient.pl
(+18 files in other folders)
